Dynegy/src/objects/Muni_Agg__c.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>This Field is created during the iAve Conversion</description>
        <label>Account Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type_Code__c</fullName>
        <label>Account Type Code</label>
        <picklist>
            <picklistValues>
                <fullName>FLOW_THROUGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL_FRIEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL_STANDALONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL_SUBACCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBNONPOR_RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBPOR_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBPOR_RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHOLESALE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle__c</fullName>
        <label>Bill Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Billing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_3__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Billing Address Line 3 (ICO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_code__c</fullName>
        <label>Billing Zip/Postal code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Customer_Name__c</fullName>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for the Call Center</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Activated Contract of a Muni Agg Customer</errorMessage>
            <filterItems>
                <field>Contract.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Muni Agg Customer</value>
            </filterItems>
            <filterItems>
                <field>Contract.Status</field>
                <operation>equals</operation>
                <value>Activated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Muni Agg</relationshipLabel>
        <relationshipName>Muni_Agg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Shows user friendly error message for the errored muni agg records.</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_CD__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Grace CD</label>
        <picklist>
            <picklistValues>
                <fullName>PCX</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked checked if there is any error while processing the Muni Agg Records.</description>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Name1__c</fullName>
        <formula>IF( ISBLANK( First_Name__c ) ,  Last_Name__c , First_Name__c +&apos; &apos;+ Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDC Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Name__c</fullName>
        <label>LDC Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <label>LDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Receive_Invoices_By__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>LDC Receive Invoices By</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMail &amp; Mail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDC_Type__c</fullName>
        <label>LDC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDC_Vendor__c</fullName>
        <label>LDC Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Cleveland Electric Illuminating Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbus Southern Power Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dayton Power and Light Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duke Energy Ohio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio Edison Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio Power Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo Edison Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Penn Power Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PECO Energy Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameren Rate Zone I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameren Rate Zone II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameren Rate Zone III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eversource East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitchburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nantucket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Edison</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <description>This field is created during the iAve conversion.</description>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_2__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Mailing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_3__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Mailing Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>This Field is created during iAve Conversion to store the mailing city for person customer</description>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <description>This field is created during the iAve conversion to store the mailing country for person account customer</description>
        <label>Mailing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <description>This field is created for iAve conversion to store the mailing state for person account</description>
        <label>Mailing State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <description>This Field is created during iAve Conversion to store the mailing street for person customer</description>
        <label>Mailing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Website__c</fullName>
        <description>This field is add during the iAve Conversion.</description>
        <label>Mailing Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <description>This field is created during iAve Conversion to store the mailing postal code for person account customer</description>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muni_Agg_CustomerID__c</fullName>
        <formula>Contract__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Muni Agg Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muni_Agg_Customer_Id__c</fullName>
        <label>Muni Agg Customer Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Period_Ends__c</fullName>
        <description>This field is created to store the Opt out period date and used in the iAve conversion</description>
        <label>Opt Out Period Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field tells if the record has been picked by the batch to create the Person Account.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_CodeContract__c</fullName>
        <formula>Contract__r.Rate_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created for Customer care team</description>
        <label>Same Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <label>Service City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_County__c</fullName>
        <label>Service County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Postal_Code__c</fullName>
        <label>Service Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_1__c</fullName>
        <label>Service Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_2__c</fullName>
        <label>Service Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <globalPicklist>Service_Territory</globalPicklist>
        <label>Service Territory</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_territory1__c</fullName>
        <formula>TEXT(Contract__r.Service_Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Unique_ID__c</fullName>
        <description>This field is created for Comed during iAve conversion to store the Utility Unique ID</description>
        <label>Utility Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Muni Agg</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Contract_Number__c</columns>
        <columns>Muni_Agg_Customer_Id__c</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Service_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Has_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Errors - Today</label>
    </listViews>
    <listViews>
        <fullName>Non_Processed</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Duplicate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Non Processed</label>
    </listViews>
    <listViews>
        <fullName>Non_Processed_Today</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Non Processed-Today</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Contract_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>david</value>
        </filters>
        <label>Test</label>
    </listViews>
    <nameField>
        <displayFormat>MA-{0}</displayFormat>
        <label>Muni Agg Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Muni Agg</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>